--- a/dashboard/app/views/lti/v1/account_linking/landing.haml
+++ b/dashboard/app/views/lti/v1/account_linking/landing.haml
@@ -7,10 +7,12 @@
       lti_provider = landing_session[:lti_provider_name]
       new_cta_type = landing_session[:new_cta_type]
       signup_flow_type = landing_session[:signup_flow_type]
+      user_type = landing_session[:user_type]
     else
       lti_provider ||= params[:lti_provider]
       new_cta_type ||= params[:new_cta_type]
       signup_flow_type ||= params[:signup_flow_type]
+      user_type ||= current_user&.user_type
     end
 
     email ||= params[:email]
@@ -23,7 +25,7 @@
     script_data[:continue_account_url] = session[:user_return_to] || home_path
     script_data[:email] = email
     script_data[:new_cta_type] = new_cta_type
-    script_data[:user_type] = landing_session[:user_type] || current_user&.user_type
+    script_data[:user_type] = user_type
 
   %script{src: webpack_asset_path('js/lti/v1/account_linking/landing.js'), data: {json: script_data.to_json}}
 %body
