Change pixels to rem

--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -1166,8 +1166,8 @@ section.quote {
   }
 
   .tab-content-container {
-    padding: 30px;
-    border-radius: 0px 0px 8px 8px;
+    padding: 1.875rem;
+    border-radius: 0 0 .5rem .5rem;
     border-right: 1px solid var(--light_gray200);
     border-bottom: 1px solid var(--light_gray200);
     border-left: 1px solid var(--light_gray200);
