--- a/apps/src/templates/curriculumCatalog/expanded_curriculum_catalog_card.module.scss
+++ b/apps/src/templates/curriculumCatalog/expanded_curriculum_catalog_card.module.scss
@@ -35,12 +35,12 @@ $container-width: 960px;
   column-gap: 48px;
 }
 
-.closeButton {
+.closeButtonContainer {
   display: flex;
   justify-content: end;
   line-height: normal;
 
-  button {
+  button.closeButton {
     background: none;
     border: none;
     padding: 0;
