--- a/apps/src/lib/levelbuilder/lesson-editor/uploadImage.module.scss
+++ b/apps/src/lib/levelbuilder/lesson-editor/uploadImage.module.scss
@@ -1,6 +1,12 @@
+.imageGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Adjust based on your needs */
+  gap: 10px; /* Adjust the gap between images */
+}
+
 .imagePreview {
-  width: 100px;
-  margin-bottom: 4px;
+  width: 100%; /* Makes image fully occupy its cell */
+  height: auto; /* Keeps the aspect ratio of the image */
 }
 .saveButton {
   width: 200px;
