rename message editor classname

--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -44,7 +44,7 @@ $default-spacing: 16px;
   width: 50px;
 }
 
-.messageEditor {
+.messageEditorContainer {
   padding-left: 20px;
   padding-right: 20px;
 }
