--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -12,6 +12,7 @@ $default-spacing: 16px;
   overflow: hidden;
 }
 
+%conversationArea,
 .conversationArea {
   display: flex;
   flex-direction: column;
@@ -27,17 +28,7 @@ $default-spacing: 16px;
 }
 
 .tabPanels {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  gap: $default-spacing;
-  box-sizing: border-box;
-  overflow-y: auto;
-  padding: 16px;
-  > div {
-    height: 100%;
-    margin: 0;
-  }
+  @extend %conversationArea;
 }
 
 .waitingForResponse {
