Use Link component with jump links for recommended/stretch curriculum

--- a/apps/src/templates/curriculumCatalog/expanded_curriculum_catalog_card.module.scss
+++ b/apps/src/templates/curriculumCatalog/expanded_curriculum_catalog_card.module.scss
@@ -188,7 +188,10 @@ p.subjectsText {
     width: 100%;
     text-wrap: wrap;
     margin-top: 8px;
-    color: $brand_secondary_default
+    color: $brand_secondary_default;
+    text-decoration: none !important;
+    font-size: 12px;
+    text-align: center;
   }
 
   .relatedCurriculaLink:hover {
