--- a/pegasus/sites.v3/code.org/public/about/partners.md.erb
+++ b/pegasus/sites.v3/code.org/public/about/partners.md.erb
@@ -20,7 +20,7 @@ style_min: true
 
 ## District Partners
 
-Code.org has over 500 partnerships with school districts around the USA. [See the full list here](/educate/district/partners).
+Code.org has many partnerships with school districts around the USA. [See the full list here](/educate/district/partners).
 
 <hr>
 <a name="infrastructure"></a>
