* added destructive list item option color

--- a/apps/src/componentLibrary/dropdown/customDropdown.module.scss
+++ b/apps/src/componentLibrary/dropdown/customDropdown.module.scss
@@ -87,6 +87,29 @@
           display: flex;
           align-items: center;
           cursor: pointer;
+          color: $light_black;
+
+          &.destructiveDropdownMenuItem {
+            color: $light_negative_500;
+
+            i {
+              color: $light_negative_500;
+            }
+
+            &:hover {
+              background-color: $light_negative_100;
+            }
+
+            &:active {
+              background-color: $light_negative_500;
+              color: $light_white;
+
+              i::before {
+                background-color: $light_negative_500;
+                color: $light_white;
+              }
+            }
+          }
 
           &:focus-visible {
             outline: 2px solid $light_primary_500;
@@ -362,6 +385,7 @@
 
           span {
             @include body-one;
+            color: inherit;
             margin-bottom: 0;
           }
         }
@@ -422,6 +446,7 @@
 
           span {
             @include body-two;
+            color: inherit;
             margin-bottom: 0;
           }
         }
@@ -482,6 +507,7 @@
 
           span {
             @include body-three;
+            color: inherit;
             margin-bottom: 0;
           }
         }
@@ -542,6 +568,7 @@
 
           span {
             @include body-four;
+            color: inherit;
             margin-bottom: 0;
           }
         }
