--- a/dashboard/app/views/levels/editors/fields/_dsl_fields.html.haml
+++ b/dashboard/app/views/levels/editors/fields/_dsl_fields.html.haml
@@ -6,8 +6,9 @@
 
   .script_text textarea {
     field-sizing: content;
-    max-width: 100%;
-    min-width: 95%;}
+    width: 100%;
+    box-sizing: border-box;
+  }
 
   .markdown {
     border: 5px solid gray;
