--- a/pegasus/sites.v3/code.org/public/diversity.md.erb
+++ b/pegasus/sites.v3/code.org/public/diversity.md.erb
@@ -175,7 +175,7 @@ In addition to the Hour of Code, Code.org regularly produces new materials and p
 
 <br>
 
-<%=view :diversity_videos %>
+<%=view :swiper_page_diversity %>
 
 <br>
 
